--- a/about.html
+++ b/about.html
@@ -12,16 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="about2.css">
 
-    <style>
 
-    </style>
 </head>
 
 <body>
 
 
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="https://www.hope3.org/"><img src="" alt="" srcset=""></a>
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +44,7 @@
 
     <div class="container mt-5">
         <div class="text-center">
-            <img src="IMG_20230820_193728_0872.jpg" alt="Profile Photo" class="profile-photo">
+            <img src="/images/IMG_20230820_193728_0872.jpg" alt="Profile Photo" class="profile-photo">
         </div>
         <h1 class="text-center">Thank you for visit my Website</h1>
 
@@ -115,7 +113,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="sakthi2.jpg" alt="Team Member 7">
+                        <img src="/images/sakthi2.jpg" alt="Team Member 7">
                         <h3>Sakthiprasath</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -125,7 +123,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="surya.jpg" alt="Team Member 8">
+                        <img src="/images/surya.jpg" alt="Team Member 8">
                         <h3>Surya</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -141,7 +139,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="ram1.jpg" alt="Team Member 8">
+                        <img src="images/ram1.jpg" alt="Team Member 8">
                         <h3>Ram</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -163,21 +161,14 @@
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150" alt="Team Member 8">
-                        <h3>Sarvin</h3>
+                        <img src="images/vaishnavi3.jpg" alt="Team Member 8">
+                        <h3>Vaishnavi</h3>
                         <p>First year BCA from BHARATH,Chennai</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="vaishnavi3.jpg" alt="Team Member 8">
-                        <h3>Vaishnavi</h3>
-                        <p>First year BCA from TAGORE,Chennai</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="team-member">
-                        <img src="nithya sree 2.jpg" alt="Team Member 8">
+                        <img src="images/nithya sree 2.jpg" alt="Team Member 8">
                         <h3>Nithya sree</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
                     </div>
