--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="/images/sakthi2.jpg" alt="Team Member 7">
+                        <img src="images/sakthi2.jpg" alt="Team Member 7">
                         <h3>Sakthiprasath</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -123,7 +123,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="/images/surya.jpg" alt="Team Member 8">
+                        <img src="images/surya.jpg" alt="Team Member 8">
                         <h3>Surya</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -173,13 +173,7 @@
                         <p>First year BCA from TAGORE,Chennai</p>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/150" alt="Team Member 8">
-                        <h3>Vaishnavi</h3>
-                        <p>First year BCA from TAGORE,Chennai</p>
-                    </div>
-                </div>
+                
 
             </div>
 
