--- a/bharath_college.html
+++ b/bharath_college.html
@@ -63,7 +63,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="bharath_school_page.html">School</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="bharath_college.html">College</a>
                             </li>
                             <li class="nav-item">
