--- a/bharath_school_page.html
+++ b/bharath_school_page.html
@@ -62,7 +62,7 @@
 
         .nav-item a {
             color: #fff;
-            /* Text color */
+            
             text-decoration: none;
             font-size: 16px;
             transition: color 0.3s;
@@ -101,7 +101,7 @@
                                 <a class="nav-link" href="bharath_home.html">Home </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="bharath_school_page.html">School</a>
+                                <a class="nav-link active" href="bharath_school_page.html">School</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="bharath_college.html">College</a>
