--- a/bharath_college.html
+++ b/bharath_college.html
@@ -37,6 +37,29 @@
         .navbar-nav .nav-link:hover {
             color: red;
         }
+        body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .navbar {
+        overflow: hidden;
+        
+    }
+
+    .navbar a {
+        float: left;
+        font-size: 16px;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    .navbar a:hover {
+       
+       background-color: white;
+    }
     </style>
 </head>
 
