--- a/about.html
+++ b/about.html
@@ -14,6 +14,31 @@
 
 
 </head>
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .navbar {
+        overflow: hidden;
+        
+    }
+
+    .navbar a {
+        float: left;
+        font-size: 16px;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    .navbar a:hover {
+        background-color:red;
+        color: white;
+    }
+</style>
 
 <body>
 
