--- a/bharath_home.html
+++ b/bharath_home.html
@@ -11,19 +11,53 @@
 
 </head>
 
+<style>
+    
+    body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .navbar {
+        overflow: hidden;
+        
+    }
+
+    .navbar a {
+        float: left;
+        font-size: 16px;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    .navbar a:hover {
+        background-color: #ddd;
+        color: red;
+    }
+
+    @media screen and (max-width: 600px) {
+        .navbar a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+    }
+</style>
+</head>
+
 <body>
-    <header class="header">
-        <div class="container">
-            <nav class="navbar">
-                <ul class="nav-links">
-                    <li><a href="bharath_home.html">Home</a></li>
-                    <li><a href="bharath_school_page.html">School</a></li>
-                    <li><a href="bharath_college.html">College</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </nav>
+<header class="header">
+    <div class="container">
+        <div class="navbar">
+            <a href="bharath_home.html">Home</a>
+            <a href="bharath_school_page.html">School</a>
+            <a href="bharath_college.html">College</a>
+            <a href="about.html">About</a>
         </div>
-    </header>
+    </div>
+</header>
 
     <section class="hero">
         <div class="container">
