--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150" alt="Team Member 8">
+                        <img src="images\sham.jpg" alt="Team Member 8">
                         <h3>Sham Edward</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
                     </div>
