--- a/bharath_home.html
+++ b/bharath_home.html
@@ -33,8 +33,8 @@
     }
 
     .navbar a:hover {
-        background-color: #ddd;
-        color: red;
+        color: #ddd;
+        
     }
 
     @media screen and (max-width: 600px) {
