--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="images/sakthi2.jpg" alt="Team Member 7">
+                        <img src="images/sakthi3.png" alt="Team Member 7">
                         <h3>Sakthiprasath</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -148,7 +148,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="images/surya.jpg" alt="Team Member 8">
+                        <img src="images/surya2.png" alt="Team Member 8">
                         <h3>Surya</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="images/maaz3.jpg" alt="Team Member 8">
+                        <img src="images/maaz4.png" alt="Team Member 8">
                         <h3>Maaz</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -164,7 +164,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="images/ram1.jpg" alt="Team Member 8">
+                        <img src="images/ram2.png" alt="Team Member 8">
                         <h3>Ram</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
 
@@ -179,21 +179,21 @@
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="images\sham.jpg" alt="Team Member 8">
+                        <img src="images/sham1.png" alt="Team Member 8">
                         <h3>Sham Edward</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="images/vaishnavi3.jpg" alt="Team Member 8">
+                        <img src="images/vaishnavi4.png" alt="Team Member 8">
                         <h3>Vaishnavi</h3>
                         <p>First year BCA from BHARATH,Chennai</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="images/nithya sree 2.jpg" alt="Team Member 8">
+                        <img src="images/nithya 3.png" alt="Team Member 8">
                         <h3>Nithya sree</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
                     </div>
