--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="about2.css">
+    <link rel="icon" href="images/My profile.jpg">
 
 
 </head>
@@ -172,18 +173,19 @@
                 </div>
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150" alt="Team Member 8">
-                        <h3>kottesh</h3>
-                        <p>First year BCA from TAGORE,Chennai</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="team-member">
                         <img src="images/sham1.png" alt="Team Member 8">
                         <h3>Sham Edward</h3>
                         <p>First year BCA from TAGORE,Chennai</p>
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <div class="team-member">
+                        <img src="https://via.placeholder.com/150" alt="Team Member 8">
+                        <h3>Logu</h3>
+                        <p>First year BCA from TAGORE,Chennai</p>
+                    </div>
+                </div>
+                
                 <div class="col-md-3">
                     <div class="team-member">
                         <img src="images/vaishnavi4.png" alt="Team Member 8">
