--- a/bharath_college.html
+++ b/bharath_college.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="bootstrap.css">
 
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/c/cb/Bharath_University_Logo.png">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
