--- a/bharath_school_page.html
+++ b/bharath_school_page.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <style>
         @media (max-width: 768px) {
 
@@ -217,61 +218,8 @@
             </div>
         </div>
 
-    </div><br>
-    <!-- <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-4">
-                <div id="carousel1" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://sbvschools.in/images/homeslide.jpg" alt="Image 1" class="d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://www.bharathschool.org/sites/default/files/images/Staff%202020-211_0.jpg"
-                                alt="Image 2" class="d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://sbvschools.in/images/gallery-4.jpg" alt="Image 3" class="d-block w-100">
-                        </div>
-                    </div>
-                </div>
-            </div><br>
-
-            <div class="col-md-4">
-                <div id="carousel3" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://www.bharathschool.org/sites/default/files/images/Staff%202020-211_0.jpg"
-                                alt="Image 2" class="d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://sbvschools.in/images/gallery-4.jpg" alt="Image 3" class="d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://sbvschools.in/images/homeslide.jpg" alt="Image 1" class="d-block w-100">
-                        </div>
-                    </div>
-                </div>
-            </div><br><br>
-
-            <div class="col-md-4">
-                <div id="carousel2" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://sbvschools.in/images/gallery-4.jpg" alt="Image 3" class="d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://sbvschools.in/images/homeslide.jpg" alt="Image 1" class="d-block w-100">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://www.bharathschool.org/sites/default/files/images/Staff%202020-211_0.jpg"
-                                alt="Image 2" class="d-block w-100">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div><br> -->
+    </div>
+    
 
     <div class="container">
         <div class="row">
@@ -293,28 +241,6 @@
             </div>
         </div>
     </div>
-
-
-
-    <div class="container-fluid">
-        <div class="container-fluid">
-            <div class="row">
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="container-fluid">
-            <div class="row">
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-
-
 </body>
 
 </html>
