--- a/about.html
+++ b/about.html
@@ -38,6 +38,8 @@
     .navbar a:hover {
         background-color: red;
         color: white;
+        padding: auto;
+        border-radius: 10px;
     }
 </style>
 
