--- a/bharath_college.html
+++ b/bharath_college.html
@@ -36,6 +36,7 @@
 
         .navbar-nav .nav-link:hover {
             color: red;
+            border-radius: 10px;
         }
         body {
         margin: 0;
