--- a/bharath_college.html
+++ b/bharath_college.html
@@ -9,7 +9,8 @@
     ]
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/c/cb/Bharath_University_Logo.png">
+    
+    <link rel="icon" href="https://arunkavitha1982.github.io/bharath_clg/bharath_college.html">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
