sarvin photo add

--- a/about.html
+++ b/about.html
@@ -135,8 +135,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- <h2 style="text-align: center;">Team</h2> -->
         <section>
             <div class="container">
                 <h2 style="text-align: center;">Team</h2>
@@ -197,7 +195,7 @@
 
                                 <div class="col-md-3">
                                     <div class="team-member">
-                                        <img src="images/vaishnavi4.png" alt="Team Member 8">
+                                        <img src="images/sarvin.png" alt="Team Member 8">
                                         <h3>Logu</h3>
                                         <p>First year BCA from TAGORE, Chennai</p>
                                     </div>
@@ -225,10 +223,10 @@
                     </div>
 
 
-                    <a class="carousel-control-prev" href="#team-carousel"  data-slide="prev">
+                    <a class="carousel-control-prev" href="#team-carousel" data-slide="prev">
 
                     </a>
-                    <a class="carousel-control-next" href="#team-carousel"  data-slide="next">
+                    <a class="carousel-control-next" href="#team-carousel" data-slide="next">
 
                     </a>
                 </div>
