sarvin clg name add

--- a/about.html
+++ b/about.html
@@ -196,8 +196,8 @@
                                 <div class="col-md-3">
                                     <div class="team-member">
                                         <img src="images/sarvin.png" alt="Team Member 8">
-                                        <h3>Logu</h3>
-                                        <p>First year BCA from TAGORE, Chennai</p>
+                                        <h3>Servin</h3>
+                                        <p>First year BCA from BHARATH, Chennai</p>
                                     </div>
                                 </div>
 
