--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
                                 <div class="col-md-3">
                                     <div class="team-member">
                                         <img src="images/sarvin.png" alt="Team Member 8">
-                                        <h3>Servin</h3>
+                                        <h3>Poothathan</h3>
                                         <p>First year BCA from BHARATH, Chennai</p>
                                     </div>
                                 </div>
