--- a/bharath_college.html
+++ b/bharath_college.html
@@ -120,6 +120,7 @@
     </div>
 
     <br>
+    <blockquote cite="https://www.bharathuniv.ac.in/index.php"></blockquote>
 
 
     <div class="container ">
@@ -170,7 +171,7 @@
         </div>
     </div>
     <div class="page-header">
-        <h2><u>Bharath Institute of Law</u></h2>
+        <h2>Bharath Institute of Law</h2>
     </div><br>
     <div class="container">
         <div class="row">
@@ -206,7 +207,7 @@
         </div>
     </div>
     <div class="page-header">
-        <h2><u>Bharath University Medicine & Health Sciences Courses</u></h2>
+        <h2>Bharath University Medicine & Health Sciences Courses</h2>
     </div><br>
     <div class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
