--- a/bharath_home.html
+++ b/bharath_home.html
@@ -22,7 +22,7 @@
     }
 
     .navbar {
-        background-color: #f30606; 
+        background-color: #f40303e8; 
     }
 
     .navbar-toggler-icon {
@@ -82,16 +82,17 @@
         
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item ">
-                    <a class="nav-link" href="bharath_home.html">Home</a>
+                <li class="nav-link ">
+                    <span><a class="nav-link" href="bharath_home.html">Home</a></span>
                 </li>
-                <li class="nav-item">
+                
+                <li class="nav-link">
                     <a class="nav-link" href="bharath_school_page.html">School</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-link">
                     <a class="nav-link" href="bharath_college.html">College</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-link">
                     <a class="nav-link" href="about.html">About</a>
                 </li>
             </ul>
@@ -99,10 +100,12 @@
     </nav>
     <section class="hero">
         <div class="container">
+            <blockquote cite="https://www.bharathuniv.ac.in/index.php">
             <h1>Welcome to Bharath Institute of Higher Education and Research</h1>
             <p>Your Pathway to Success Begins Here</p>
             <a href="bharath_college.html" class="btn">Details</a>
             <a href="https://admission.bharathuniv.ac.in/ahs-application-form" target="_blank" class="btn">Apply Now</a>
+            </blockquote>
         </div>
     </section>
 
