--- a/bharath_home.html
+++ b/bharath_home.html
@@ -23,6 +23,7 @@
 
     .navbar {
         background-color: #f40303e8; 
+        overflow: hidden;
     }
 
     .navbar-toggler-icon {
@@ -40,11 +41,13 @@
         text-align: left;
         padding: 14px 16px;
         text-decoration: none;
+
     }
 
     .navbar a:hover {
         background-color: white;
         border-radius: 10px;
+        padding: auto;
     }
     .btn {
     display: inline-block;
