--- a/bharath_college.html
+++ b/bharath_college.html
@@ -29,12 +29,13 @@
 
         .navbar-nav .nav-link {
             color: black;
+            
         }
 
 
         .navbar-nav .nav-link:hover {
-            color: red;
-            border-radius: 10px;
+            color:blue;
+            border-radius: 13px;
         }
 
         body {
@@ -66,11 +67,11 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="col-sm-4">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/c/cb/Bharath_University_Logo.png" width="30%">
+            <nav class="navbar navbar-expand-lg ">
+                <div class="col-sm-3">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/c/cb/Bharath_University_Logo.png" width="40%">
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-6">
                     <h1>BHARATH INSTITUTE</h1>
                 </div>
                 <div class="col-sm-3">
@@ -169,7 +170,7 @@
                 <img src="https://www.bharathuniv.ac.in/images/ORIENTED.png" width="100%" height="100%">
             </div>
         </div>
-    </div>
+    </div><br><br>
     <div class="page-header">
         <h2>Bharath Institute of Law</h2>
     </div><br>
@@ -205,7 +206,7 @@
                 <img src="https://bharathlaw.ac.in/img/big/4.jpg" width="100%" height="70%">
             </div>
         </div>
-    </div>
+    </div><br><br>
     <div class="page-header">
         <h2>Bharath University Medicine & Health Sciences Courses</h2>
     </div><br>
