--- a/about.html
+++ b/about.html
@@ -15,38 +15,12 @@
 
 
 </head>
-<style>
-    body {
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
-    }
 
-    .navbar {
-        overflow: hidden;
-
-    }
-
-    .navbar a {
-        float: left;
-        font-size: 16px;
-        color: black;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-
-    .navbar a:hover {
-        background-color: red;
-        color: white;
-        padding: auto;
-        border-radius: 10px;
-    }
-</style>
 
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg ">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +60,7 @@
         <section id="contact">
             <h2 class="section-title">Contact Information</h2>
             <ul class="contact-list">
-                <li>Email: arunkumar.msg@gmail.com</li>
+                <li>Email: arunkumar.msg1982@gmail.com</li>
                 <li>Phone: 6381689021</li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/arun-kumar-862981293">LinkedIn Profile</a></li>
                 <li>Twitter: <a href="https://twitter.com/Arunkum262005">TwitterHandle</a></li>
