--- a/bharath_home.html
+++ b/bharath_home.html
@@ -37,7 +37,7 @@
 
     .navbar a {
         font-size: 16px;
-        color: black;
+        color: white;
         text-align: left;
         padding: 14px 16px;
         text-decoration: none;
@@ -46,6 +46,7 @@
 
     .navbar a:hover {
         background-color: white;
+        color: #FF0000;
         border-radius: 10px;
         padding: auto;
     }
@@ -74,7 +75,13 @@
 </style>
 
 <body>
+<div class="container-fluid" style="background-color: #f40303e8;">
+    <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
 
+        
     
     <nav class="navbar navbar-expand-lg ">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -101,6 +108,11 @@
             </ul>
         </div>
     </nav>
+</div>
+
+</div>
+
+</div>
     <section class="hero">
         <div class="container">
             <blockquote cite="https://www.bharathuniv.ac.in/index.php">
