--- a/bharath_school_page.html
+++ b/bharath_school_page.html
@@ -89,23 +89,23 @@
         .navbar a {
             float: left;
             font-size: 16px;
-            color: black;
+            color:white;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
         }
 
         .navbar a:hover {
-            background-color: #ddd;
-            color:blue;
+            background-color:white;
+            color:#f40303e8;
         }
     </style>
 
 
 </head>
 
-<body style="background-color: white">
-    <div class="container-fluid">
+<body style="background-color: #ffcccc;">
+    <div class="container-fluid" style="background-color: #f40303ce;" >
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="col-sm-1"></div>
@@ -114,7 +114,7 @@
                         width="50%">
                 </div>
                 <div class="col-sm-6">
-                    <h1 style="color: darkblue;">Shree Bharath Vidyaasharam</h1>
+                    <h1 style="color: white;">Shree Bharath Vidyaasharam</h1>
                 </div>
                 <div class="col-sm-3">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -222,24 +222,39 @@
     </div>
     
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-12">
                 <div id="carousel1" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://sbvschools.in/images/homeslide2.jpg" alt="Image 1" class="d-block w-100">
+                            <img src="https://sbvschools.in/images/homeslide2.jpg" alt="Image 1" class="d-block w-100" width="80%" height="80%">
                         </div>
                         <div class="carousel-item">
                             <img src="https://sbvschools.in/images/gallery-6.jpg"
-                                alt="Image 2" class="d-block w-100">
+                                alt="Image 2" class="d-block w-100" width="80%" height="80%">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://sbvschools.in/images/home2.jpg" alt="Image 3" class="d-block w-100">
+                            <img src="https://sbvschools.in/images/home2.jpg" alt="Image 3" class="d-block w-100" width="80%" height="80%">
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div> -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="https://sbvschools.in/images/homeslide2.jpg" width="100%" >
+            </div>
+            <div class="col-md-4">
+                <img src="https://sbvschools.in/images/gallery-6.jpg" width="100%" >
+            </div>
+            <div class="col-md-4">
+                <img src="https://sbvschools.in/images/home2.jpg" width="100%" >
+            </div>
+
+
         </div>
     </div>
 </body>
