--- a/bharath_college.html
+++ b/bharath_college.html
@@ -69,7 +69,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" >
         <div class="row">
             <nav class="navbar navbar-expand-lg ">
                 <div class="col-sm-3">
@@ -81,7 +81,7 @@
                 <div class="col-sm-3">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <img src="images/menu.png" alt="menubar" width="30px">
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
