--- a/bharath_home.html
+++ b/bharath_home.html
@@ -84,7 +84,7 @@
     <nav class="navbar navbar-expand-lg ">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <img src="images/menu.png" alt="menubar" width="30px">
         </button>
 
         
