--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="https://www.hope3.org/images/palani_desk.png" alt="Team Member 1">
+                        <img src="https://www.hope3.org/images/palani_desk.png" alt="Mr Palaniappan">
                         <h3>Mr Palaniappan</h3>
                         <p>Amazon, USA</p>
 
@@ -82,7 +82,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="https://www.hope3.org/images/neels_desk.png" alt="Team Member 2">
+                        <img src="https://www.hope3.org/images/neels_desk.png" alt="Mr Neelakandan Venkataraman">
                         <h3>Mr Neelakandan Venkataraman</h3>
                         <p>Microsoft, USA</p>
 
@@ -91,7 +91,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="https://www.hope3.org/images/meenakshi_desk.png" alt="Team Member 3">
+                        <img src="https://www.hope3.org/images/meenakshi_desk.png" alt="Dr Meenakshi Sundaram">
                         <h3>Dr Meenakshi Sundaram</h3>
                         <p>Intel, USA</p>
 
@@ -100,7 +100,7 @@
 
                 <div class="col-md-3">
                     <div class="team-member">
-                        <img src="https://www.hope3.org/images/shiva_desk.png" alt="Team Member 4">
+                        <img src="https://www.hope3.org/images/shiva_desk.png" alt="Mr Sivakumar">
                         <h3>Mr Sivakumar</h3>
                         <p>Managing Trustee
                             Hope3 India Foundation</p>
