--- a/bharath_school_page.html
+++ b/bharath_school_page.html
@@ -221,30 +221,38 @@
             </div>
         </div>
 
-    </div>
+    </div><br>
 
 
-    <!-- <div class="container">
+    <div class="container">
         <div class="row">
             <div class="col-12">
                 <div id="carousel1" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://sbvschools.in/images/homeslide2.jpg" alt="Image 1" class="d-block w-100" width="80%" height="80%">
+                            <img src="https://sbvschools.in/images/homeslide2.jpg" alt="Image 1" class="d-block w-100"
+                                width="80%" height="80%">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://sbvschools.in/images/gallery-6.jpg"
-                                alt="Image 2" class="d-block w-100" width="80%" height="80%">
+                            <img src="https://sbvschools.in/images/gallery-6.jpg" alt="Image 2" class="d-block w-100"
+                                width="80%" height="80%">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://sbvschools.in/images/home2.jpg" alt="Image 3" class="d-block w-100" width="80%" height="80%">
+                            <img src="https://sbvschools.in/images/home2.jpg" alt="Image 3" class="d-block w-100"
+                                width="80%" height="80%">
                         </div>
                     </div>
+                    <a class="carousel-control-prev" href="#carousel1" data-slide="prev">
+
+                    </a>
+                    <a class="carousel-control-next" href="#carousel1" data-slide="next">
+
+                    </a>
                 </div>
             </div>
         </div>
-    </div> -->
-    <div class="container">
+    </div>
+    <!-- <div class="container">
         <div class="row">
             <div class="col-md-4">
                 <img src="https://sbvschools.in/images/homeslide2.jpg" width="100%">
@@ -258,7 +266,7 @@
 
 
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
