--- a/bharath_college.html
+++ b/bharath_college.html
@@ -25,12 +25,13 @@
             }
         }
 
-        @media (min-width: 769px) {}
+        @media (min-width: 769px) {
 
         .navbar-nav .nav-link {
             color: black;
 
         }
+    }
 
         body {
             margin: 0;
